sdk/v0.3/string.mdx
---
title: "pixeltable.functions.string"
sidebarTitle: "string"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) for `StringType`. It closely follows the Pandas `pandas.Series.str` API.

Example:

``` python
import pixeltable as pxt

t = pxt.get_table(...)
t.select(t.str_col.capitalize()).collect()
```


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/string.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `capitalize()` <sub>udf</sub>

Return string with its first character capitalized and the rest lowercased.


Equivalent to [`str.capitalize()`](https://docs.python.org/3/library/stdtypes.html#str.capitalize).


**Signature:**

```python
capitalize(self: String)-> String
```


---

### `casefold()` <sub>udf</sub>

Return a casefolded copy of string.


Equivalent to [`str.casefold()`](https://docs.python.org/3/library/stdtypes.html#str.casefold).


**Signature:**

```python
casefold(self: String)-> String
```


---

### `center()` <sub>udf</sub>

Return a centered string of length `width`.


Equivalent to [`str.center()`](https://docs.python.org/3/library/stdtypes.html#str.center).


**Signature:**

```python
center(
    self: String,
    width: Int,
    fillchar: String
)-> String
```

**Parameters:**

- **`width`** (*Int*): Total width of the resulting string.
- **`fillchar`** (*String*): Character used for padding.


---

### `contains()` <sub>udf</sub>

Test if string contains pattern or regex.


**Signature:**

```python
contains(
    self: String,
    pattern: String,
    case: Bool,
    flags: Int,
    regex: Bool
)-> Bool
```

**Parameters:**

- **`pattern`** (*String*): string literal or regular expression
- **`case`** (*Bool*): if False, ignore case
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module
- **`regex`** (*Bool*): if True, treat pattern as a regular expression


---

### `count()` <sub>udf</sub>

Count occurrences of pattern or regex.


**Signature:**

```python
count(
    self: String,
    pattern: String,
    flags: Int
)-> Int
```

**Parameters:**

- **`pattern`** (*String*): string literal or regular expression
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


---

### `endswith()` <sub>udf</sub>

Return `True` if the string ends with the specified suffix, otherwise return `False`.


Equivalent to [`str.endswith()`](https://docs.python.org/3/library/stdtypes.html#str.endswith).


**Signature:**

```python
endswith(
    self: String,
    pattern: String
)-> Bool
```

**Parameters:**

- **`pattern`** (*String*): string literal


---

### `fill()` <sub>udf</sub>

Wraps the single paragraph in string, and returns a single string containing the wrapped paragraph.


Equivalent to [`textwrap.fill()`](https://docs.python.org/3/library/textwrap.html#textwrap.fill).


**Signature:**

```python
fill(
    self: String,
    width: Int,
    **kwargs
)-> String
```

**Parameters:**

- **`width`** (*Int*): Maximum line width.
- **`kwargs`** (*Any*): Additional keyword arguments to pass to `textwrap.fill()`.


---

### `find()` <sub>udf</sub>

Return the lowest index in string where `substr` is found within the slice `s[start:end]`.


Equivalent to [`str.find()`](https://docs.python.org/3/library/stdtypes.html#str.find).


**Signature:**

```python
find(
    self: String,
    substr: String,
    start: Optional[Int],
    end: Optional[Int]
)-> Int
```

**Parameters:**

- **`substr`** (*String*): substring to search for
- **`start`** (*Optional[Int]*): slice start
- **`end`** (*Optional[Int]*): slice end


---

### `findall()` <sub>udf</sub>

Find all occurrences of a regular expression pattern in string.


Equivalent to [`re.findall()`](https://docs.python.org/3/library/re.html#re.findall).


**Signature:**

```python
findall(
    self: String,
    pattern: String,
    flags: Int
)-> Json
```

**Parameters:**

- **`pattern`** (*String*): regular expression pattern
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


---

### `format()` <sub>udf</sub>

Perform string formatting.


Equivalent to [`str.format()`](https://docs.python.org/3/library/stdtypes.html#str.format).


**Signature:**

```python
format(
    self: String,
    *args,
    **kwargs
)-> String
```


---

### `fullmatch()` <sub>udf</sub>

Determine if string fully matches a regular expression.


Equivalent to [`re.fullmatch()`](https://docs.python.org/3/library/re.html#re.fullmatch).


**Signature:**

```python
fullmatch(
    self: String,
    pattern: String,
    case: Bool,
    flags: Int
)-> Bool
```

**Parameters:**

- **`pattern`** (*String*): regular expression pattern
- **`case`** (*Bool*): if False, ignore case
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


---

### `index()` <sub>udf</sub>

Return the lowest index in string where `substr` is found within the slice `[start:end]`.


Raises ValueError if `substr` is not found.

Equivalent to [`str.index()`](https://docs.python.org/3/library/stdtypes.html#str.index).


**Signature:**

```python
index(
    self: String,
    substr: String,
    start: Optional[Int],
    end: Optional[Int]
)-> Int
```

**Parameters:**

- **`substr`** (*String*): substring to search for
- **`start`** (*Optional[Int]*): slice start
- **`end`** (*Optional[Int]*): slice end


---

### `isalnum()` <sub>udf</sub>

Return `True` if all characters in the string are alphanumeric and there is at least one character, `False`


otherwise.

Equivalent to \[`str.isalnum()`\](https://docs.python.org/3/library/stdtypes.html#str.isalnum


**Signature:**

```python
isalnum(self: String)-> Bool
```


---

### `isalpha()` <sub>udf</sub>

Return `True` if all characters in the string are alphabetic and there is at least one character, `False` otherwise.


Equivalent to [`str.isalpha()`](https://docs.python.org/3/library/stdtypes.html#str.isalpha).


**Signature:**

```python
isalpha(self: String)-> Bool
```


---

### `isascii()` <sub>udf</sub>

Return `True` if the string is empty or all characters in the string are ASCII, `False` otherwise.


Equivalent to [`str.isascii()`](https://docs.python.org/3/library/stdtypes.html#str.isascii).


**Signature:**

```python
isascii(self: String)-> Bool
```


---

### `isdecimal()` <sub>udf</sub>

Return `True` if all characters in the string are decimal characters and there is at least one character, `False`


otherwise.

Equivalent to [`str.isdecimal()`](https://docs.python.org/3/library/stdtypes.html#str.isdecimal).


**Signature:**

```python
isdecimal(self: String)-> Bool
```


---

### `isdigit()` <sub>udf</sub>

Return `True` if all characters in the string are digits and there is at least one character, `False` otherwise.


Equivalent to [`str.isdigit()`](https://docs.python.org/3/library/stdtypes.html#str.isdigit).


**Signature:**

```python
isdigit(self: String)-> Bool
```


---

### `isidentifier()` <sub>udf</sub>

Return `True` if the string is a valid identifier according to the language definition, `False` otherwise.


Equivalent to [`str.isidentifier()`](https://docs.python.org/3/library/stdtypes.html#str.isidentifier)


**Signature:**

```python
isidentifier(self: String)-> Bool
```


---

### `islower()` <sub>udf</sub>

Return `True` if all cased characters in the string are lowercase and there is at least one cased character,


`False` otherwise.

Equivalent to [`str.islower()`](https://docs.python.org/3/library/stdtypes.html#str.islower)


**Signature:**

```python
islower(self: String)-> Bool
```


---

### `isnumeric()` <sub>udf</sub>

Return `True` if all characters in the string are numeric characters, `False` otherwise.


Equivalent to [`str.isnumeric()`](https://docs.python.org/3/library/stdtypes.html#str.isnumeric)


**Signature:**

```python
isnumeric(self: String)-> Bool
```


---

### `isspace()` <sub>udf</sub>

Return `True` if there are only whitespace characters in the string and there is at least one character,


`False` otherwise.

Equivalent to [`str.isspace()`](https://docs.python.org/3/library/stdtypes.html#str.isspace)


**Signature:**

```python
isspace(self: String)-> Bool
```


---

### `istitle()` <sub>udf</sub>

Return `True` if the string is a titlecased string and there is at least one character, `False` otherwise.


Equivalent to [`str.istitle()`](https://docs.python.org/3/library/stdtypes.html#str.istitle)


**Signature:**

```python
istitle(self: String)-> Bool
```


---

### `isupper()` <sub>udf</sub>

Return `True` if all cased characters in the string are uppercase and there is at least one cased character,


`False` otherwise.

Equivalent to [`str.isupper()`](https://docs.python.org/3/library/stdtypes.html#str.isupper)


**Signature:**

```python
isupper(self: String)-> Bool
```


---

### `join()` <sub>udf</sub>

Return a string which is the concatenation of the strings in `elements`.


Equivalent to [`str.join()`](https://docs.python.org/3/library/stdtypes.html#str.join)


**Signature:**

```python
join(
    sep: String,
    elements: Json
)-> String
```


---

### `len()` <sub>udf</sub>

Return the number of characters in the string.


Equivalent to [`len(str)`](https://docs.python.org/3/library/functions.html#len)


**Signature:**

```python
len(self: String)-> Int
```


---

### `ljust()` <sub>udf</sub>

Return the string left-justified in a string of length `width`.


Equivalent to [`str.ljust()`](https://docs.python.org/3/library/stdtypes.html#str.ljust)


**Signature:**

```python
ljust(
    self: String,
    width: Int,
    fillchar: String
)-> String
```

**Parameters:**

- **`width`** (*Int*): Minimum width of resulting string; additional characters will be filled with character defined in `fillchar`.
- **`fillchar`** (*String*): Additional character for filling.


---

### `lower()` <sub>udf</sub>

Return a copy of the string with all the cased characters converted to lowercase.


Equivalent to [`str.lower()`](https://docs.python.org/3/library/stdtypes.html#str.lower)


**Signature:**

```python
lower(self: String)-> String
```


---

### `lstrip()` <sub>udf</sub>

Return a copy of the string with leading characters removed. The `chars` argument is a string specifying the set of


characters to be removed. If omitted or `None`, whitespace characters are removed.

Equivalent to [`str.lstrip()`](https://docs.python.org/3/library/stdtypes.html#str.lstrip)


**Signature:**

```python
lstrip(
    self: String,
    chars: Optional[String]
)-> String
```

**Parameters:**

- **`chars`** (*Optional[String]*): The set of characters to be removed.


---

### `match()` <sub>udf</sub>

Determine if string starts with a match of a regular expression


**Signature:**

```python
match(
    self: String,
    pattern: String,
    case: Bool,
    flags: Int
)-> Bool
```

**Parameters:**

- **`pattern`** (*String*): regular expression pattern
- **`case`** (*Bool*): if False, ignore case
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module


---

### `normalize()` <sub>udf</sub>

Return the Unicode normal form.


Equivalent to [`unicodedata.normalize()`](https://docs.python.org/3/library/unicodedata.html#unicodedata.normalize)


**Signature:**

```python
normalize(
    self: String,
    form: String
)-> String
```

**Parameters:**

- **`form`** (*String*): Unicode normal form (`'NFC'`, `'NFKC'`, `'NFD'`, `'NFKD'`)


---

### `pad()` <sub>udf</sub>

Pad string up to width


**Signature:**

```python
pad(
    self: String,
    width: Int,
    side: String,
    fillchar: String
)-> String
```

**Parameters:**

- **`width`** (*Int*): Minimum width of resulting string; additional characters will be filled with character defined in `fillchar`.
- **`side`** (*String*): Side from which to fill resulting string (`'left'`, `'right'`, `'both'`)
- **`fillchar`** (*String*): Additional character for filling


---

### `partition()` <sub>udf</sub>

Splits string at the first occurrence of `sep`, and returns 3 elements containing the part before the


separator, the separator itself, and the part after the separator. If the separator is not found, return 3 elements containing string itself, followed by two empty strings.


**Signature:**

```python
partition(
    self: String,
    sep: String
)-> Json
```


---

### `removeprefix()` <sub>udf</sub>

Remove prefix. If the prefix is not present, returns string.


**Signature:**

```python
removeprefix(
    self: String,
    prefix: String
)-> String
```


---

### `removesuffix()` <sub>udf</sub>

Remove suffix. If the suffix is not present, returns string.


**Signature:**

```python
removesuffix(
    self: String,
    suffix: String
)-> String
```


---

### `repeat()` <sub>udf</sub>

Repeat string `n` times.


**Signature:**

```python
repeat(
    self: String,
    n: Int
)-> String
```


---

### `replace()` <sub>udf</sub>

Replace occurrences of `pattern` with `repl`.


Equivalent to [`str.replace()`](https://docs.python.org/3/library/stdtypes.html#str.replace) or [`re.sub()`](https://docs.python.org/3/library/re.html#re.sub), depending on the value of regex.


**Signature:**

```python
replace(
    self: String,
    pattern: String,
    repl: String,
    n: Int,
    case: Bool,
    flags: Int,
    regex: Bool
)-> String
```

**Parameters:**

- **`pattern`** (*String*): string literal or regular expression
- **`repl`** (*String*): replacement string
- **`n`** (*Int*): number of replacements to make (-1 for all)
- **`case`** (*Bool*): if False, ignore case
- **`flags`** (*Int*): [flags](https://docs.python.org/3/library/re.html#flags) for the `re` module
- **`regex`** (*Bool*): if True, treat pattern as a regular expression


---

### `rfind()` <sub>udf</sub>

Return the highest index where `substr` is found, such that `substr` is contained within `[start:end]`.


Equivalent to [`str.rfind()`](https://docs.python.org/3/library/stdtypes.html#str.rfind).


**Signature:**

```python
rfind(
    self: String,
    substr: String,
    start: Optional[Int],
    end: Optional[Int]
)-> Int
```

**Parameters:**

- **`substr`** (*String*): substring to search for
- **`start`** (*Optional[Int]*): slice start
- **`end`** (*Optional[Int]*): slice end


---

### `rindex()` <sub>udf</sub>

Return the highest index where `substr` is found, such that `substr` is contained within `[start:end]`.


Raises ValueError if `substr` is not found.

Equivalent to [`str.rindex()`](https://docs.python.org/3/library/stdtypes.html#str.rindex).


**Signature:**

```python
rindex(
    self: String,
    substr: String,
    start: Optional[Int],
    end: Optional[Int]
)-> Int
```


---

### `rjust()` <sub>udf</sub>

Return the string right-justified in a string of length `width`.


Equivalent to [`str.rjust()`](https://docs.python.org/3/library/stdtypes.html#str.rjust).


**Signature:**

```python
rjust(
    self: String,
    width: Int,
    fillchar: String
)-> String
```

**Parameters:**

- **`width`** (*Int*): Minimum width of resulting string.
- **`fillchar`** (*String*): Additional character for filling.


---

### `rpartition()` <sub>udf</sub>

This method splits string at the last occurrence of `sep`, and returns a list containing the part before the


separator, the separator itself, and the part after the separator.


**Signature:**

```python
rpartition(
    self: String,
    sep: String
)-> Json
```


---

### `rstrip()` <sub>udf</sub>

Return a copy of string with trailing characters removed.


Equivalent to [`str.rstrip()`](https://docs.python.org/3/library/stdtypes.html#str.rstrip).


**Signature:**

```python
rstrip(
    self: String,
    chars: Optional[String]
)-> String
```

**Parameters:**

- **`chars`** (*Optional[String]*): The set of characters to be removed. If omitted or `None`, whitespace characters are removed.


---

### `slice()` <sub>udf</sub>

Return a slice.


**Signature:**

```python
slice(
    self: String,
    start: Optional[Int],
    stop: Optional[Int],
    step: Optional[Int]
)-> String
```

**Parameters:**

- **`start`** (*Optional[Int]*): slice start
- **`stop`** (*Optional[Int]*): slice end
- **`step`** (*Optional[Int]*): slice step


---

### `slice_replace()` <sub>udf</sub>

Replace a positional slice with another value.


**Signature:**

```python
slice_replace(
    self: String,
    start: Optional[Int],
    stop: Optional[Int],
    repl: Optional[String]
)-> String
```

**Parameters:**

- **`start`** (*Optional[Int]*): slice start
- **`stop`** (*Optional[Int]*): slice end
- **`repl`** (*Optional[String]*): replacement value


---

### `startswith()` <sub>udf</sub>

Return `True` if string starts with `pattern`, otherwise return `False`.


Equivalent to [`str.startswith()`](https://docs.python.org/3/library/stdtypes.html#str.startswith).


**Signature:**

```python
startswith(
    self: String,
    pattern: String
)-> Int
```

**Parameters:**

- **`pattern`** (*String*): string literal


---

### `strip()` <sub>udf</sub>

Return a copy of string with leading and trailing characters removed.


Equivalent to [`str.strip()`](https://docs.python.org/3/library/stdtypes.html#str.strip).


**Signature:**

```python
strip(
    self: String,
    chars: Optional[String]
)-> String
```

**Parameters:**

- **`chars`** (*Optional[String]*): The set of characters to be removed. If omitted or `None`, whitespace characters are removed.


---

### `swapcase()` <sub>udf</sub>

Return a copy of string with uppercase characters converted to lowercase and vice versa.


Equivalent to [`str.swapcase()`](https://docs.python.org/3/library/stdtypes.html#str.swapcase).


**Signature:**

```python
swapcase(self: String)-> String
```


---

### `title()` <sub>udf</sub>

Return a titlecased version of string, i.e. words start with uppercase characters, all remaining cased characters


are lowercase.

Equivalent to [`str.title()`](https://docs.python.org/3/library/stdtypes.html#str.title).


**Signature:**

```python
title(self: String)-> String
```


---

### `upper()` <sub>udf</sub>

Return a copy of string converted to uppercase.


Equivalent to [`str.upper()`](https://docs.python.org/3/library/stdtypes.html#str.upper).


**Signature:**

```python
upper(self: String)-> String
```


---

### `wrap()` <sub>udf</sub>

Wraps the single paragraph in string so every line is at most `width` characters long.


Returns a list of output lines, without final newlines.

Equivalent to [`textwrap.fill()`](https://docs.python.org/3/library/textwrap.html#textwrap.fill).


**Signature:**

```python
wrap(
    self: String,
    width: Int,
    **kwargs
)-> Json
```

**Parameters:**

- **`width`** (*Int*): Maximum line width.
- **`kwargs`** (*Any*): Additional keyword arguments to pass to `textwrap.fill()`.


---

### `zfill()` <sub>udf</sub>

Pad a numeric string with ASCII `0` on the left to a total length of `width`.


Equivalent to [`str.zfill()`](https://docs.python.org/3/library/stdtypes.html#str.zfill).


**Signature:**

```python
zfill(
    self: String,
    width: Int
)-> String
```

**Parameters:**

- **`width`** (*Int*): Minimum width of resulting string.

